RESOLVED FIXED164677
Follow-up: fix the OpenSource build on Mac after r208642
https://bugs.webkit.org/show_bug.cgi?id=164677
Summary Follow-up: fix the OpenSource build on Mac after r208642
Wenson Hsieh
Reported 2016-11-11 23:29:26 PST
It seems I forgot to mark a property as assign.
Attachments
Patch (1.45 KB, patch)
2016-11-11 23:30 PST, Wenson Hsieh
rniwa: review+
Patch for landing (1.43 KB, patch)
2016-11-12 00:11 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2016-11-11 23:30:53 PST
Ryosuke Niwa
Comment 2 2016-11-12 00:07:35 PST
Comment on attachment 294602 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=294602&action=review rs=me. > Source/WebCore/ChangeLog:7 > + > + The playbackControlsController property should also be `assign`. > + Missing Reviewed by.
Wenson Hsieh
Comment 3 2016-11-12 00:11:53 PST
Created attachment 294606 [details] Patch for landing
Wenson Hsieh
Comment 4 2016-11-12 00:12:54 PST
Comment on attachment 294602 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=294602&action=review >> Source/WebCore/ChangeLog:7 >> + > > Missing Reviewed by. Fixed. Thanks!
WebKit Commit Bot
Comment 5 2016-11-12 00:47:06 PST
Comment on attachment 294606 [details] Patch for landing Clearing flags on attachment: 294606 Committed r208645: <http://trac.webkit.org/changeset/208645>
Ryosuke Niwa
Comment 6 2016-11-12 00:50:41 PST
Thanks for the build fixes!
Note You need to log in before you can comment on or make changes to this bug.