Follow-up: fix the OpenSource build on Mac after r208642 https://bugs.webkit.org/show_bug.cgi?id=164677

Reviewed by Ryosuke Niwa.

The playbackControlsController property should also be `assign`.

* platform/spi/cocoa/AVKitSPI.h:


Canonical link: https://commits.webkit.org/182363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208645 268f45cc-cd09-0410-ab3c-d52691b4dbfc